; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-properties.c_obs_property_list_insert_float.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-properties.c_obs_property_list_insert_float.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.list_data = type { i64 }

@OBS_COMBO_FORMAT_FLOAT = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @obs_property_list_insert_float(i32* %0, i64 %1, i8* %2, double %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca double, align 8
  %9 = alloca %struct.list_data*, align 8
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store i8* %2, i8** %7, align 8
  store double %3, double* %8, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = call %struct.list_data* @get_list_data(i32* %10)
  store %struct.list_data* %11, %struct.list_data** %9, align 8
  %12 = load %struct.list_data*, %struct.list_data** %9, align 8
  %13 = icmp ne %struct.list_data* %12, null
  br i1 %13, label %14, label %25

14:                                               ; preds = %4
  %15 = load %struct.list_data*, %struct.list_data** %9, align 8
  %16 = getelementptr inbounds %struct.list_data, %struct.list_data* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @OBS_COMBO_FORMAT_FLOAT, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %25

20:                                               ; preds = %14
  %21 = load %struct.list_data*, %struct.list_data** %9, align 8
  %22 = load i64, i64* %6, align 8
  %23 = load i8*, i8** %7, align 8
  %24 = call i32 @insert_item(%struct.list_data* %21, i64 %22, i8* %23, double* %8)
  br label %25

25:                                               ; preds = %20, %14, %4
  ret void
}

declare dso_local %struct.list_data* @get_list_data(i32*) #1

declare dso_local i32 @insert_item(%struct.list_data*, i64, i8*, double*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
